[package]
name = "dumbhttp"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A dumb http server that responds with a preconfigured http response"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
hyper = "0.14.17"
routerify = "3.0.0"
tokio = { version = "1.17.0", features = ["full"] }
