[package]
name = "dumbhttp"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "A dumb http server that responds with a preconfigured http response"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.17", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
